[package]
name = "prophet-sys"
version = "0.1.0"
links = "prophet"
description = "Low-level bindings for libprophet, a library to probe 6-piece \"Prophet\" chess endgame tablebases (depth to mate)"
repository = "https://github.com/niklasf/prophet-sys"
license = "GPL-3.0"
categories = ["external-ffi-bindings", "games"]
keywords = ["chess", "prophet", "tablebase"]
edition = "2024"

[build-dependencies]
bindgen = "0.72.1"
cc = "1.2.55"
tap = "1.0.1"

[dependencies]
zstd-sys = "2.0.16"
