[package]
name = "prophet-sys-fuzz"
publish = false
edition = "2024"

[package.metadata]
cargo-fuzz = true

[dependencies]
arbitrary = { version = "1.4.2", features = ["derive"] }
libfuzzer-sys = "0.4"
shakmaty = { version = "0.30.0", features = ["arbitrary"] }

[dependencies.prophet-sys]
path = ".."

[[bin]]
name = "probe_dtm"
path = "fuzz_targets/probe_dtm.rs"
test = false
doc = false
bench = false
